---14/7/23-----
Fixed notify (now works for 500ms minimum intervals and provides 1sec minimum periodic notifications)
Ran test for 3 clients and 20 active subscriptions
Compiled project to docker images (error with thymeleaf parsing and finding repo table class)
---15/7/23-----
finished docker compose for 5 clients
ran benchmarks
---21/7/23-----
added timescaledb instead of influxdb
added event listener for data collection
---31/7/23-----
finished form fields
tweaked datacollection so that subcontroller can wait for it to start saving metrics to timescaledb
added hidebuttons button, showoptionals buttons for each event and show all notifications
fixed prom querries desynced (put them in the same try-catch block)
---1/8/23-----
added supportedFeatures to form
added converterToForm for update (failedEventReports not working)

TODO:

-fix prom querry , data coll, notif listener and subcontroller for filtering the nfs by id,setid,...
-add optionals to nf load and create job for pushing test data to timescaledb
-update and delete (+on client)
-add db to client and showallsubs (+ choose a sub to update  or show latest notif)
-add past offset to notify (+ show metrics from each event notif object to client in a list)
-implement thresholds & immediate reporting
-make fake metrics for UE_Mobility and implement the use case
-add second prometheus instance (implement data collection for list of prometheus instances)
-add kafka broker inbetween to talk to prometheus instances / timescaledbs through subscriptions
-add master client to view all subs
-add event listener that groups data with turncating in 60min timewindows with 1min averages and stores them permanently
-graph grouped data with graphana


ML stuff:
-do simple data analysis on grouped data (for example predict cpu usage)
-train an ml model that gives out predictions for cpu usage
-make notify request ml model for data
-add future offset to notify