@@ -35,5 +35,5 @@ src/main/resources/pgadmin-data
 src/main/resources/postgres-data
 src/main/resources/influxdbv2
 src/main/resources/timescaledb-data
-
+pgadmin-data
 bin
