@@ -1,18 +1,27 @@
-FROM eclipse-temurin:17-jdk-alpine as build
-WORKDIR /workspace/app
+#for windows:
+# FROM eclipse-temurin:17-jdk-alpine as build
+# WORKDIR /workspace/app
 
-COPY mvnw .
-COPY .mvn .mvn
-COPY pom.xml .
-COPY src src
+# COPY mvnw .
+# COPY .mvn .mvn
+# COPY pom.xml .
+# COPY src src
 
-RUN ./mvnw install -DskipTests
-RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
+# RUN ./mvnw install -DskipTests
+# RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
+# FROM eclipse-temurin:17-jre-alpine
+# VOLUME /tmp
+# ARG DEPENDENCY=/workspace/app/target/dependency
+# COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
+# COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
+# COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
+# ENTRYPOINT ["java","-cp","app:app/lib/*","io.nwdaf.eventsubscription.NwdafSubApplication"]
+
+#for ubuntu:
 FROM eclipse-temurin:17-jre-alpine
 VOLUME /tmp
-ARG DEPENDENCY=/workspace/app/target/dependency
-COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
-COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","io.nwdaf.eventsubscription.NwdafSubApplication"]
+EXPOSE 8080
+ARG JAR_FILE=target/demo-0.0.1-SNAPSHOT.jar
+ADD ${JAR_FILE} app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
