@@ -114,6 +114,17 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+				<excludes>
+					<exclude>**/pgadmin-data/**</exclude>
+					<exclude>**/postgres-data/**</exclude>
+					<exclude>**/timescaledb-data/**</exclude>
+				</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
@@ -142,10 +153,10 @@
 			</executions>
 			</plugin> -->
 			
-			<plugin>
+			<!-- <plugin>
 		         <groupId>org.graalvm.buildtools</groupId>
 		         <artifactId>native-maven-plugin</artifactId>
-		    </plugin>
+		    </plugin> -->
 		</plugins>
 	</build>
 
